--- a/about.html
+++ b/about.html
@@ -8,21 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
+    <nav>
         <div class="logo">
-            <h1>S</h1>
+            <img src="./img/logo.png" alt="">
         </div>
         <ul>
             <li><a href="/index.html"><img src="./img/icons8-home-64.png" alt="Home"></a>
             <p>Home</p></li>
             <li class="selected"><a href="/about.html"><img src="./img/icons8-account-96.png" alt=""></a>
             <p>About Me</p></li>
-            <li><a href="#"><img src="./img/icons8-briefcase-60.png" alt=""></a>
+            <li><a href="/projects.html"><img src="./img/icons8-briefcase-60.png" alt=""></a>
             <p>Projects</p></li>
-            <li><a href="#"><img src="./img/icons8-mail-96.png" alt=""></a>
-            <p>Contact Me</p></li>
         </ul>
-    </footer>
-    <h1>ABOUT ME 👨🏻‍🌾</h1>
+    </nav>
+    <div class="aboutContainer glass container flex">
+        <img id="blop" src="./img/blob.svg" alt="">
+        <h1>ABOUT ME 👨🏻‍🌾</h1>
+        <div>
+            <div class="infoabout"><p>Hello, My name is Shawki and called Shawki Web based on my YT channel, I'm from Algeria, what else you have know about me?<br></p>
+            <p>I play epic HTML & CSS, I'm a self taught dev with some greek's work ethics, other than that I will let my projects take the microphone and speak about me.</p>
+            <a href="./projects.html" class="button">
+                <p>My Projects</p>
+                <div></div>
+            </a></div>
+            <img id="spaceship" src="./img/undraw_programming_re_kg9v.svg" alt="">
+        </div>
+    </div>
 </body>
 </html>
