--- a/index.html
+++ b/index.html
@@ -8,22 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
+    <nav>
         <div class="logo">
-            <h1>S</h1>
+            <img src="./img/logo.png" alt="">
         </div>
         <ul>
             <li class="selected"><a href="/index.html"><img src="./img/icons8-home-64.png" alt="Home"></a>
             <p>Home</p></li>
             <li><a href="/about.html"><img src="./img/icons8-account-96.png" alt=""></a>
             <p>About Me</p></li>
-            <li><a href="#"><img src="./img/icons8-briefcase-60.png" alt=""></a>
+            <li><a href="/projects.html"><img src="./img/icons8-briefcase-60.png" alt=""></a>
             <p>Projects</p></li>
-            <li><a href="#"><img src="./img/icons8-mail-96.png" alt=""></a>
-            <p>Contact Me</p></li>
         </ul>
-    </footer>
-    <div class="main">
+    </nav>
+    <div class="main container">
         <div class="stars">
             <div class="star"></div>
             <div class="star"></div>
@@ -58,7 +56,7 @@
             <p>Web developer!</p>
             <p>I'm perfect when it comes to HTML & CSS, and I'm currently adding to that Js.</p>
             <div class="contactContainer">
-                <a href="#" class="contact button">
+                <a href="www.linkedin.com/in/shawkiweb" target="_blank" class="contact button">
                     <p>Contact me</p>
                     <div></div>
                 </a>
