--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                 </a>
                 <div class="socialMedia">
                     <ul>
-                        <li><a href="#">
+                        <li><a href="https://github.com/6wki">
                             <img src="./img/icons8-github-75.png" alt="">
                             <img src="./img/icons8-github-75 (1).png" alt="">
                         </a></li>
-                        <li><a href="#" target="_blank">
+                        <li><a href="https://www.linkedin.com/in/shawkiweb/" target="_blank">
                             <img src="./img/icons8-linkedin-2-75.png" alt="">
                             <img src="./img/icons8-linkedin-2-75 (1).png" alt="">
                         </a></li>
@@ -74,11 +74,11 @@
                             <img src="./img/icons8-twitter-75.png" alt="">
                             <img src="./img/icons8-twitter-75 (1).png" alt="">
                         </a></li>
-                        <li><a href="#" target="_blank">
+                        <li><a href="https://web.facebook.com/shawki.web" target="_blank">
                             <img src="./img/icons8-facebook-75 (1).png" alt="">
                             <img src="./img/icons8-facebook-75.png" alt="">
                         </a></li>
-                        <li><a href="#" target="_blank">
+                        <li><a href="https://www.instagram.com/6wk.i/" target="_blank">
                             <img src="./img/icons8-instagram-75 (1).png" alt="">
                             <img src="./img/icons8-instagram-75.png" alt="">
                         </a></li>
