--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>Web developer!</p>
             <p>I'm perfect when it comes to HTML & CSS, and I'm currently adding to that Js.</p>
             <div class="contactContainer">
-                <a href="www.linkedin.com/in/shawkiweb" target="_blank" class="contact button">
+                <a href="https://www.linkedin.com/in/shawkiweb/" target="_blank" class="contact button">
                     <p>Contact me</p>
                     <div></div>
                 </a>
