--- a/index.html
+++ b/index.html
@@ -1,892 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Source Sans Pro', sans-serif;
-    cursor: default;
-}
-
-@font-face {
-    font-family: cotta;
-    src: url(./fonts/BenzGroteskHeavy-z8Vo1.ttf);
-}
-
-:root {
-    --yellow: #ffb703;
-    --orange: #f77f00;
-    --white: #f2f2f2;
-    --dark: #1a1423;
-    --darkblue: #2f2e41;
-}
-
-body {
-    height: 100vh;
-    background-color: var(--darkblue);
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    justify-content: center;
-}
-
-a, p, h1 {
-    color: var(--white);
-}
-
-h1 {
-    font-family: cotta;
-}
-
-a {
-    text-decoration: none;
-}
-
-/* Utilities */
-
-.flex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.container {
-    width: 100%;
-    max-width: 1600px;
-}
-
-.button {
-    cursor: pointer;
-    padding: .6rem .8rem;
-    border-radius: 1rem 0 1rem 0;
-    box-shadow: inset 0 0 0 2px var(--white);
-    overflow: hidden;
-    position: relative;
-    width: fit-content;
-}
-
-.button div {
-    background-color: #f77f00;
-    position: absolute;
-    z-index: -1;
-    top: 3rem;
-    bottom: 0;
-    right: 0;
-    left: 0;
-}
-
-.button:hover div {
-    animation: fillit 1s forwards ease-in-out;
-    background-color: var(--orange);
-}
-
-.button p {
-    cursor: pointer;
-}
-
-@keyframes fillit {
-    0% {
-        top: 3rem;
-    }
-
-    20% {
-        top: 1.4rem;
-    }
-
-    50% {
-        top: 2rem;
-    }
-
-    100% {
-        top: 0;
-    }
-}
-
-/* nav */
-
-nav {
-    background-color: var(--orange);
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 4rem;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-}
-
-.logo {
-    position: absolute;
-    top: 0;
-    font-size: 2rem;
-    height: 4.5rem;
-    width: 3.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.logo img {
-    animation: opacity 3s ease-in-out infinite;
-    width: 4.5rem;
-    opacity: 1;
-    position: absolute;
-}
-
-@keyframes opacity {
-    0% {
-        opacity: 0;
-        bottom: -5rem;
-    }
-
-    10% {
-        bottom: 0;
-        opacity: 1;
-    }
-
-    20% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    68% {
-        opacity: 1;
-    }
-
-    70% {
-        opacity: 0;
-    }
-
-    72% {
-        opacity: 1;
-    }
-
-    74% {
-        opacity: 0;
-    }
-
-    80% {
-        opacity: 1;
-        bottom: 0;
-    }
-
-    100% {
-        opacity: 0;
-        bottom: 5rem;
-    }
-}
-
-nav ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style: none;
-    gap: 1rem;
-}
-
-nav ul li a img {
-    cursor: pointer;
-    width: 2.5rem;
-    padding: .4rem;
-    transition: .2s;
-}
-
-nav ul li {
-    position: relative;
-}
-
-nav ul li p {
-    position: absolute;
-    top: .8rem;
-    left: 3.6rem;
-    transition: .2s;
-    visibility: hidden;
-    opacity: 0;
-    width: max-content;
-    padding: .2rem .4rem;
-    border-radius: .25rem;
-    background-color: var(--white);
-    display: flex;
-    color: var(--orange);
-    justify-content: center;
-}
-
-nav ul li p::after {
-    content: '';
-    z-index: -1;
-    position: absolute;
-    top: .18rem;
-    left: -.45rem;
-    background-color: var(--white);
-    width: .27rem;
-    height: .27rem;
-    border: .5rem solid;
-    border-radius: .2rem;
-    border-color: transparent transparent var(--white) var(--white);
-    transform: rotate(45deg);
-}
-
-nav ul li:hover p {
-    left: 4.2rem;
-    visibility: visible;
-    opacity: 1;
-}
-
-nav ul li:hover img {
-    transform: scale(1.3);
-    box-shadow: none;
-}
-
-.selected:hover a img {
-    rotate: none;
-}
-
-.selected:hover p {
-    opacity: 0;
-    visibility: hidden;
-}
-
-.selected a img {
-    box-shadow: inset -2px -2px 0 0 var(--darkblue);
-    border-radius: .5rem;
-    transform: scale(1.3);
-}
-
-/* Main */
-
-.main {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-transform: uppercase;
-}
-
-.infomain h1 span {
-    font-family: cotta;
-    font-size: 5rem;
-}
-
-.infomain h1 {
-    width: 20rem;
-    opacity: 0;
-    left: -29rem;
-    animation: beginning 3s 2s ease-in-out forwards;
-}
-
-.infomain p:nth-child(4) {
-    margin-bottom: 1.5rem;
-}
-
-@keyframes beginning {
-
-    0% {
-        height: 0;
-    }
-
-    15% {
-        height: 7.5rem;
-        opacity: 1;
-    }
-
-    60% {
-        opacity: 1;
-    }
-
-    63% {
-        opacity: 0;
-    }
-
-    66% {
-        opacity: 1;
-    }
-
-    69% {
-        opacity: 0;
-    }
-
-    72% {
-        opacity: 1;
-    }
-
-    70% {
-        height: 7.5rem;
-    }
-
-    100% {
-        height: 7.5rem;
-        left: 0;
-        opacity: 1;
-    }
-    
-}
-
-.infomain h1 span {
-    position: absolute;
-    right: 2.5rem;
-    bottom: .3rem;
-}
-
-.infomain h1:hover span:first-child {
-    animation: jumping .5s;
-}
-
-.infomain h1:hover span:nth-child(2) {
-    animation: jumping .5s .1s;
-}
-
-.infomain h1:hover span:nth-child(3) {
-    animation: jumping .5s .2s;
-}
-
-.infomain h1:hover span:nth-child(4) {
-    animation: jumping .5s .3s;
-}
-
-.infomain h1:hover span:nth-child(5) {
-    animation: jumping .5s .4s;
-}
-
-.infomain h1:hover span:nth-child(6) {
-    animation: jumping .5s .6s;
-}
-
-.infomain h1 span:first-child {
-    left: 0;
-}
-
-.infomain h1 span:nth-child(2) {
-    left: 3rem;
-}
-
-.infomain h1 span:nth-child(3) {
-    left: 6.3rem;
-}
-
-.infomain h1 span:nth-child(4) {
-    left: 9rem;
-}
-
-.infomain h1 span:nth-child(5) {
-    left: 13.8rem;
-}
-
-.infomain h1 span:nth-child(6) {
-    left: 17.4rem;
-}
-
-@keyframes jumping {
-    0% {
-        bottom: .3rem;
-    }
-
-    50% {
-        bottom: 1.5rem;
-    }
-
-    100% {
-        bottom: .3rem;
-    }
-}
-
-.infomain h1 {
-    word-spacing: -10rem;
-}
-
-.infomain > div {
-    position: relative;
-}
-
-.infomain p:nth-child(4) {
-    width: 20rem;
-    margin-top: 1rem;
-}
-
-.infomain p:nth-child(3) {
-    color: var(--yellow);
-}
-
-.stars {
-    position: relative;
-    height: 100%;
-}
-
-.star {
-    background-color: var(--white);
-    border-radius: 50%;
-    position: absolute;
-}
-
-.star:first-child {
-    top: 0rem;
-    left: 40rem;
-    width: .4rem;
-    height: .4rem;
-}
-
-.star:nth-child(2) {
-    top: 5rem;
-    left: 48rem;
-    width: .2rem;
-    height: .2rem;
-}
-
-.star:nth-child(3) {
-    top: -7rem;
-    left: 45rem;
-    width: .2rem;
-    height: .2rem;
-}
-
-.star:nth-child(4) {
-    top: -10rem;
-    left: 55rem;
-    width: .4rem;
-    height: .4rem;
-}
-
-.star:nth-child(5) {
-    top: -9rem;
-    left: 50rem;
-    width: .1rem;
-    height: .1rem;
-}
-
-.star:nth-child(6) {
-    top: -5rem;
-    left: 55rem;
-    width: .1rem;
-    height: .1rem;
-}
-
-.star:nth-child(7) {
-    top: -4rem;
-    left: 50rem;
-    width: .2rem;
-    height: .2rem;
-}
-
-.star:nth-child(8) {
-    top: 1rem;
-    left: 52rem;
-    width: .2rem;
-    height: .2rem;
-}
-
-.star:nth-child(9) {
-    top: -1rem;
-    left: 47rem;
-    width: .2rem;
-    height: .2rem;
-}
-
-.star:nth-child(10) {
-    top: 7rem;
-    left: 35rem;
-    width: .4rem;
-    height: .4rem;
-}
-
-.star:nth-child(11) {
-    top: 3rem;
-    left: 45rem;
-    width: .1rem;
-    height: .1rem;
-}
-
-.star:nth-child(12) {
-    top: 9rem;
-    left: 42rem;
-    width: .1rem;
-    height: .1rem;
-}
-
-.star:nth-child(13) {
-    top: 10rem;
-    left: 54rem;
-    width: .2rem;
-    height: .2rem;
-}
-
-.star:nth-child(14) {
-    top: -8rem;
-    left: 35rem;
-    width: .1rem;
-    height: .1rem;
-}
-
-.star:nth-child(15) {
-    top: -9rem;
-    left: 40rem;
-    width: .1rem;
-    height: .1rem;
-}
-
-.star:nth-child(16) {
-    top: 10rem;
-    left: 30rem;
-    width: .1rem;
-    height: .1rem;
-}
-
-.rightmain {
-    position: relative;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: var(--dark);
-    color: #2f2e41;
-}
-
-.rightmain p {
-    font-size: 1rem;
-    margin: .8rem;
-    font-family: cotta;
-}
-
-.rightmain p span {
-    color: var(--orange);
-    font-family: cotta;
-}
-
-.rightmain img:first-child {
-    width: 40rem;
-    right: 0;
-}
-
-/* ContactContainer */
-
-.contactContainer {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-/* Social Media */
-
-.socialMedia ul {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    gap: 1rem;
-}
-
-.socialMedia ul li img:last-child {
-    position: absolute;
-    left: 0;
-    visibility: hidden;
-    opacity: 0;
-}
-
-.socialMedia ul li a:hover img:first-child {
-    transform: scale(1.2);
-    rotate: 360deg;
-    visibility: hidden;
-    opacity: 0;
-}
-
-.socialMedia ul li a:hover img:last-child {
-    visibility: visible;
-    opacity: 1;
-    rotate: 360deg;
-    transform: scale(1.2);
-}
-
-.socialMedia ul li a {
-    position: relative;
-} 
-
-.socialMedia img {
-    width: 2.6rem;
-    cursor: pointer;
-    transition: .4s;
-}
-
-.socialMedia ul li:nth-child(2) img,
-.socialMedia ul li:nth-child(4) img {
-    width: 1.8rem;
-}
-
-.socialMedia ul li:nth-child(3) img {
-    width: 2rem;
-}
-
-/* About me */
-
-.glass {
-    position: relative;
-    width: 80rem;
-    height: 35rem;
-    padding: 2rem 0;
-}
-
-.glass h1 {
-    position: absolute;
-    top: 2rem;
-}
-
-.glass::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.044), rgba(255, 255, 255, 0.236));
-    border-radius: .5rem;
-    backdrop-filter: blur(1rem);
-    box-shadow: 0 0px 32px 0 rgba(0, 0, 0, 0.336);
-    z-index: -1;
-}
-
-.aboutContainer > div {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding-left: 5rem;
-    margin-top: 5rem;
-}
-
-#blop {
-    position: absolute;
-    z-index: -5;
-}
-
-.aboutContainer img:first-child {
-    bottom: 9rem;
-    width: 80rem;
-    animation: dancing 80s ease-in-out infinite;
-}
-
-@keyframes dancing {
-
-    0% {
-        transform: rotate(0);
-    }
-
-    50% {
-        transform: rotate(365deg) scale(1.1);
-    }
-
-    100% {
-        transform: rotate(0);
-    }
-}
-
-.infoabout {
-    width: 20rem;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-    align-items: center;
-}
-
-#spaceship {
-    width: 30rem;
-    margin-left: 3rem;
-}
-
-/* My Projects */
-
-.projectsContainer {
-    padding: .2rem;
-    position: relative;
-}
-
-.projects {
-    width: 100%;
-    height: 70%;
-    gap: 1rem;
-    padding: 2rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 10rem);
-}
-
-.projectsContainer > img {
-    position: absolute;
-    top: -12.7rem;
-    z-index: -2;
-    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(349deg) brightness(101%) contrast(105%);
-}
-
-.projects::-webkit-scrollbar-track {
-    margin-right: .6rem;
-}
-
-.projects::-webkit-scrollbar
-{
-	width: 8px;
-}
-
-.projects::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-color: #2f2e41;
-}
-
-.project {
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-    border-radius: .2rem;
-}
-
-.project p {
-    position: absolute;
-    bottom: -1.5rem;
-    transition: .5s;
-    right: 50%;
-    width: 100%;
-    transform: translateX(50%);
-    text-transform: uppercase;
-    z-index: 1;
-    cursor: pointer;
-    width: max-content;
-    padding: .2rem .5rem;
-    border-radius: .2rem;
-}
-
-.project:hover p {
-    bottom: 42%;
-    background-color: var(--white);
-    color: var(--orange);
-}
-
-.project::after {
-    background-color: var(--orange);
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 100%;
-    cursor: pointer;
-    opacity: .7;
-    transition: .2s;
-}
-
-.project:hover::after {
-    top: 0;
-}
-
-.project:hover img {
-    transform: scale(1.2) rotate(2deg);
-    filter: blur(.05rem);
-    opacity: .6;
-}
-
-.project img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    cursor: pointer;
-    transition: .5s;
-}
-
-/* Responsivity */
-
-@media (max-width: 1285px) {
-    .stars,
-    .rightmain,
-    .projectsContainer > img,
-    #spaceship,
-    .blop,
-    .projects .project:last-child {
-        display: none;
-    }
-
-    .main {
-        justify-content: center;
-    }
-
-    nav {
-        top: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
-        height: 4rem;
-    }
-
-    nav ul {
-        flex-direction: row;
-    }
-
-    .logo {
-        left: .5rem;
-        height: 100%;
-    }
-
-    .infomain {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .contactContainer {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .infomain h1 span {
-        right: 0;
-    }
-
-    .aboutContainer > div {
-        padding: 0;
-        margin-top: 2rem;
-    }
-
-    .glass h1 {
-        position: sticky;
-        margin: 0;
-    }
-
-    .glass {
-        border-radius: 0;
-        height: 100%;
-        padding-top: 4rem;
-    }
-
-    .glass::before {
-        border-radius: 0;
-    }
-
-    .projects {
-        grid-template-columns: repeat(2, 1fr);
-        align-content: center;
-    }
-
-    .logo img {
-        width: 4rem;
-    }
-
-    #blop {
-        display: none;
-    }
-
-    nav ul li p {
-        left: 0;
-    }
-
-    nav ul li:hover p {
-        left: 0;
-        top: 4.5rem;
-    }
-
-    nav ul li p::after {
-        display: none;
-    }
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shawki | Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <div class="logo">
+            <img src="./img/logo.png" alt="">
+        </div>
+        <ul>
+            <li class="selected"><a href="/index.html"><img src="./img/icons8-home-64.png" alt="Home"></a>
+            <p>Home</p></li>
+            <li><a href="/about.html"><img src="./img/icons8-account-96.png" alt=""></a>
+            <p>About Me</p></li>
+            <li><a href="/projects.html"><img src="./img/icons8-briefcase-60.png" alt=""></a>
+            <p>Projects</p></li>
+        </ul>
+    </nav>
+    <div class="main container">
+        <div class="stars">
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+        </div>
+        <div class="infomain">
+            <p>Hello world 👨🏻‍🌾, I'm</p>
+            <div>
+                <h1>
+                    <span>s</span>
+                    <span>h</span>
+                    <span>a</span>
+                    <span>w</span>
+                    <span>K</span>
+                    <span>i</span>
+                    <span>.</span>
+                </h1>
+            </div>
+            <p>Web developer!</p>
+            <p>I'm perfect when it comes to HTML & CSS, and I'm currently adding to that Js.</p>
+            <div class="contactContainer">
+                <a href="www.linkedin.com/in/shawkiweb" target="_blank" class="contact button">
+                    <p>Contact me</p>
+                    <div></div>
+                </a>
+                <div class="socialMedia">
+                    <ul>
+                        <li><a href="https://github.com/6wki">
+                            <img src="./img/icons8-github-75.png" alt="">
+                            <img src="./img/icons8-github-75 (1).png" alt="">
+                        </a></li>
+                        <li><a href="https://www.linkedin.com/in/shawkiweb/" target="_blank">
+                            <img src="./img/icons8-linkedin-2-75.png" alt="">
+                            <img src="./img/icons8-linkedin-2-75 (1).png" alt="">
+                        </a></li>
+                        <li><a href="https://twitter.com/Shawkiweb" target="_blank">
+                            <img src="./img/icons8-twitter-75.png" alt="">
+                            <img src="./img/icons8-twitter-75 (1).png" alt="">
+                        </a></li>
+                        <li><a href="https://web.facebook.com/shawki.web" target="_blank">
+                            <img src="./img/icons8-facebook-75 (1).png" alt="">
+                            <img src="./img/icons8-facebook-75.png" alt="">
+                        </a></li>
+                        <li><a href="https://www.instagram.com/6wk.i/" target="_blank">
+                            <img src="./img/icons8-instagram-75 (1).png" alt="">
+                            <img src="./img/icons8-instagram-75.png" alt="">
+                        </a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="rightmain">
+            <img src="./img/undraw_moonlight_-5-ksn.svg" alt="">
+            <p>Just <span>a hermite</span> drowning in his <span> laboratory.</span></p>
+        </div>
+    </div>
+</body>
+</html>
